# Stock-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/design/: stock-agent-engineering-design.md
docs/prd/: stock-info-agent-prd.md
docs/superpowers/plans/: 2026-06-27-iteration-1-real-data-deepseek.md
docs/superpowers/specs/: 2026-06-27-iteration-1-real-data-deepseek-design.md
migrations/: env.py
migrations/versions/: 0001_initial.py
stock_agent/app/: main.py
stock_agent/app/api/: routes.py
stock_agent/app/core/: config.py  database.py  redaction.py
stock_agent/app/domain/: schemas.py
stock_agent/app/models/: tables.py
stock_agent/app/providers/: akshare_market_data.py  deepseek_llm.py  server_chan.py
stock_agent/app/repositories/: evidence.py  push_records.py  settings.py  watch_targets.py
stock_agent/app/services/: guardrail.py  reports.py
stock_agent/app/web/templates/: base.html  dashboard.html  push_detail.html  push_records.html  settings.html  targets.html
tests/api/: test_routes.py
tests/core/: test_config.py
tests/domain/: test_schemas.py
tests/providers/: test_akshare_market_data.py  test_deepseek_llm.py  test_server_chan.py
tests/repositories/: test_repositories.py
tests/services/: test_guardrail.py  test_reports.py
